# lwm2mc-altern

./: .gitmodules  CMakeLists.txt  README.md  WAKAAMA.md  lwm2mc-altern.cmake  lwm2mc-test copy.txt  lwm2mc-test.cmake
src/: CMakeLists.txt
src/client-wakaama/: CMakeLists.txt  README.md  client.c  client.cpp  client_save.c  client_save.h  object_access_control.cpp  object_device.c  object_device.cpp  object_firmware.c  object_firmware.cpp  object_security.c  object_security.cpp  object_server.c  system_api.c  system_api.cpp  wakaama.md
src/client-wakaama/mbedtls-tools/: commandline.c  commandline.h  connection.h
src/wakaama-client/: CMakeLists.txt  README.md  lwm2mclient.c  lwm2mclient.cpp  lwm2mclient.h  lwm2mclient.hpp  object_connectivity_moni.cpp  object_connectivity_stat.cpp  object_device.cpp  object_firmware.cpp  object_location.cpp  object_security.cpp  object_server.cpp  system_api.cpp  wakaama.md
src/wakaama-client/tools/: CMakeLists.txt  connection.h  dtlsconnection.c  dtlsconnection.h  wakaama.cmake
src/wakaama-client/tools/dtls/: CMakeLists.txt
